# rust-log-analyzer

./: .gitignore  README.md
.devcontainer/: compose.yaml  devcontainer.json
analyzer/: log_sender.py  main.py  pyproject.toml
collector/: Cargo.toml
collector/src/: app.rs  main.rs  state.rs  tui.rs  types.rs
sample_app/: Dockerfile  Dockerfile.vector  app.py  compose.yaml  pyproject.toml  vector.yaml
