[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.31"
ratatui = "0.29.0"
redis = { version = "0.32.7", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
